--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
             </section>
 
             <div class="cookies">
-                <a href="">Cookies</a>
+                <a href="">Legal</a>
+                <a href="">Segurança e centro de privacidade</a>
+                <a href="">Política de privacidade</a> <br>
+                <a href="">Sobre anúncios</a>
+                <a href="">Acessibilidade</a>
+                <a href="">Notice at Collection</a> <br>
+                <a href="">Your privacy choices</a>
+                <a href="https://www.spotify.com/br-pt/legal/cookies-policy/" target="_blank">Cookies</a>
+                
             </div>
 
             <div class="languages">
