--- a/index.html
+++ b/index.html
@@ -60,15 +60,17 @@
             </section>
 
             <div class="cookies">
-                <a href="">Legal</a>
-                <a href="">Segurança e centro de privacidade</a>
-                <a href="">Política de privacidade</a> 
-                <a href="">Sobre anúncios</a>
-                <a href="">Acessibilidade</a>
-                <a href="">Notice at Collection</a> 
-                <a href="">Your privacy choices</a>
-                <a href="https://www.spotify.com/br-pt/legal/cookies-policy/" target="_blank">Cookies</a>
+                <div class="cookies__links">
+                    <a href="">Legal</a>
+                    <a href="">Segurança e centro de privacidade</a>
+                    <a href="">Política de privacidade</a>
+                    <a href="">Sobre anúncios</a>
+                    <a href="">Acessibilidade</a>
+                    <a href="">Notice at Collection</a>
+                    <a href="">Your privacy choices</a>
+                    <a href="https://www.spotify.com/br-pt/legal/cookies-policy/" target="_blank">Cookies</a>
                 
+                </div>
             </div>
 
             <div class="languages">
