create podcast button

--- a/index.html
+++ b/index.html
@@ -58,6 +58,16 @@
                     </button>
                 </div>
             </section>
+            <section class="section-playlist">
+                <div class="section-playlist__content">
+                    <span class="text title">Que tal seguir um podcast novo?</span>
+                    <span class="text subtitle">Avisaremos você sobre novos episódios.</span>
+                    <button class="section-podcast__button">
+                        <span>Explore podcasts</span>
+                    </button>
+                </div>
+            </section>
+            </section>
 
             <div class="cookies">
                 <div class="cookies__links">
@@ -69,7 +79,7 @@
                     <a href="">Notice at Collection</a>
                     <a href="">Your privacy choices</a>
                     <a href="https://www.spotify.com/br-pt/legal/cookies-policy/" target="_blank">Cookies</a>
-                
+
                 </div>
             </div>
 
@@ -258,7 +268,7 @@
                     </div>
                 </div>
 
-                
+
             </div>
         </div>
     </main>
